# TP.CPP.Registry

./: .gitignore  CMakeLists.txt  install.sh  uninstall.sh
source/: Arrays.h  CMakeLists.txt  Entry.cpp  Entry.h  EntryList.cpp  EntryList.h  EntryType.h  Events.cpp  Events.h  Integers.h  Key.cpp  Key.h  OutdatedRegistryException.cpp  OutdatedRegistryException.h  Word.cpp  Word.h  tpregistry-config.cmake
source/arrays/: ByteList.cpp  ByteList.h  WordList.cpp  WordList.h
source/ints/: VBool.cpp  VBool.h  VByte.cpp  VByte.h  VInt16.cpp  VInt16.h  VInt32.cpp  VInt32.h  VInt64.cpp  VInt64.h
